--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,75 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-30T10:11:12.384Z\n"
-"PO-Revision-Date: 2021-08-30T10:11:12.384Z\n"
+"POT-Creation-Date: 2021-08-30T18:24:06.251Z\n"
+"PO-Revision-Date: 2021-08-30T18:24:06.251Z\n"
+
+msgid "Analytics Details"
+msgstr "Analytics Details"
+
+msgid "Uses"
+msgstr "Uses"
+
+msgid "aggregation type through period and hierarchy"
+msgstr "aggregation type through period and hierarchy"
+
+msgid "data sources"
+msgstr "data sources"
+
+msgid "Category Combo is"
+msgstr "Category Combo is"
+
+msgid "which has cross-tabulation between "
+msgstr "which has cross-tabulation between "
+
+msgid "with following details"
+msgstr "with following details"
+
+msgid "Data sources"
+msgstr "Data sources"
+
+msgid "Data element is captured from following sources"
+msgstr "Data element is captured from following sources"
+
+msgid "submitting {{variables1}} after every {{variables2}} days "
+msgstr "submitting {{variables1}} after every {{variables2}} days "
+
+msgid "Data element Facts"
+msgstr "Data element Facts"
+
+msgid "Accepts only"
+msgstr "Accepts only"
+
+msgid "to enforce validation"
+msgstr "to enforce validation"
+
+msgid "Has"
+msgstr "Has"
+
+msgid "related validation rules"
+msgstr "related validation rules"
+
+msgid "Part of numerators of"
+msgstr "Part of numerators of"
+
+msgid "indicators"
+msgstr "indicators"
+
+msgid "Part of denominators of"
+msgstr "Part of denominators of"
+
+msgid "Introduction"
+msgstr "Introduction"
+
+msgid "can be described as {{variables}}."
+msgstr "can be described as {{variables}}."
+
+msgid ""
+"It’s labelled in short as {{variables1}} and has a code of {{variables2}}. "
+"In data entry form, it’s named “{{variables3}}”"
+msgstr ""
+"It’s labelled in short as {{variables1}} and has a code of {{variables2}}. "
+"In data entry form, it’s named “{{variables3}}”"
 
 msgid "Datasets (Reporting rates) in indicator"
 msgstr "Datasets (Reporting rates) in indicator"
@@ -147,9 +214,6 @@ msgstr "show less"
 msgid "show more"
 msgstr "show more"
 
-msgid "Introduction"
-msgstr "Introduction"
-
 msgid "is a"
 msgstr "is a"
 
@@ -176,3 +240,46 @@ msgstr "Color"
 
 msgid "Legends for analysis"
 msgstr "Legends for analysis"
+
+msgid "Accesibility & Sharing Settings"
+msgstr "Accesibility & Sharing Settings"
+
+msgid "This"
+msgstr "This"
+
+msgid "was first created on"
+msgstr "was first created on"
+
+msgid "by"
+msgstr "by"
+
+msgid "and last updated on"
+msgstr "and last updated on"
+
+msgid "Details"
+msgstr "Details"
+
+msgid "User Access"
+msgstr "User Access"
+
+msgid "can"
+msgstr "can"
+
+msgid "User Group Access"
+msgstr "User Group Access"
+
+msgid "Related Indicators"
+msgstr "Related Indicators"
+
+msgid "This {{variables1}} is not related to any indicator"
+msgstr "This {{variables1}} is not related to any indicator"
+
+msgid ""
+"Below are set of indicators using this {resourceType} as numerator or "
+"denominator in their calculations."
+msgstr ""
+"Below are set of indicators using this {resourceType} as numerator or "
+"denominator in their calculations."
+
+msgid "Type"
+msgstr "Type"
