fixing query aggregation level

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-30T19:39:10.868Z\n"
-"PO-Revision-Date: 2021-08-30T19:39:10.868Z\n"
+"POT-Creation-Date: 2021-08-31T07:22:35.401Z\n"
+"PO-Revision-Date: 2021-08-31T07:22:35.401Z\n"
 
 msgid "Analytics Details"
 msgstr "Analytics Details"
@@ -37,6 +37,36 @@ msgstr "Data element is captured from following sources"
 
 msgid "submitting {{variables1}} after every {{variables2}} days "
 msgstr "submitting {{variables1}} after every {{variables2}} days "
+
+msgid "Color"
+msgstr "Color"
+
+msgid " Icon"
+msgstr " Icon"
+
+msgid "Option set"
+msgstr "Option set"
+
+msgid "Option set for Comments"
+msgstr "Option set for Comments"
+
+msgid "Legends"
+msgstr "Legends"
+
+msgid "Aggregation Levels"
+msgstr "Aggregation Levels"
+
+msgid "No legends assigned"
+msgstr "No legends assigned"
+
+msgid "No organization unit level assigned"
+msgstr "No organization unit level assigned"
+
+msgid "Programs"
+msgstr "Programs"
+
+msgid "submitting records on every event(case or individual)"
+msgstr "submitting records on every event(case or individual)"
 
 msgid "Data element Facts"
 msgstr "Data element Facts"
@@ -102,9 +132,6 @@ msgstr "Assigned orgunits"
 msgid "Data elements"
 msgstr "Data elements"
 
-msgid "Legends"
-msgstr "Legends"
-
 msgid "Data sources (Datasets/Programs)"
 msgstr "Data sources (Datasets/Programs)"
 
@@ -169,6 +196,33 @@ msgstr "Numerator"
 msgid "Denominator"
 msgstr "Denominator"
 
+msgid "Data elements in indicator"
+msgstr "Data elements in indicator"
+
+msgid "There were no Data Elements in the Indicator Calculations"
+msgstr "There were no Data Elements in the Indicator Calculations"
+
+msgid "Data Element"
+msgstr "Data Element"
+
+msgid "Expression part (Numerator/ Denominator)"
+msgstr "Expression part (Numerator/ Denominator)"
+
+msgid "Value Type"
+msgstr "Value Type"
+
+msgid "Zero Significance"
+msgstr "Zero Significance"
+
+msgid "Categories"
+msgstr "Categories"
+
+msgid "Datasets/ Programs"
+msgstr "Datasets/ Programs"
+
+msgid " There are no indicator facts associated with this indicator"
+msgstr " There are no indicator facts associated with this indicator"
+
 msgid "Indicator facts"
 msgstr "Indicator facts"
 
@@ -183,12 +237,6 @@ msgstr "Code"
 
 msgid "Indicators"
 msgstr "Indicators"
-
-msgid "show less"
-msgstr "show less"
-
-msgid "show more"
-msgstr "show more"
 
 msgid "is a"
 msgstr "is a"
@@ -210,9 +258,6 @@ msgstr "Upper"
 
 msgid "Lower"
 msgstr "Lower"
-
-msgid "Color"
-msgstr "Color"
 
 msgid "Legends for analysis"
 msgstr "Legends for analysis"
@@ -265,21 +310,3 @@ msgstr "Data elements in {{variables}}"
 
 msgid "There were no Data Elements in the {{variables}} Calculations"
 msgstr "There were no Data Elements in the {{variables}} Calculations"
-
-msgid "Data Element"
-msgstr "Data Element"
-
-msgid "Expression part (Numerator/ Denominator)"
-msgstr "Expression part (Numerator/ Denominator)"
-
-msgid "Value Type"
-msgstr "Value Type"
-
-msgid "Zero Significance"
-msgstr "Zero Significance"
-
-msgid "Categories"
-msgstr "Categories"
-
-msgid "Datasets/ Programs"
-msgstr "Datasets/ Programs"
