--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-31T07:22:35.401Z\n"
-"PO-Revision-Date: 2021-08-31T07:22:35.401Z\n"
+"POT-Creation-Date: 2021-08-31T09:02:54.831Z\n"
+"PO-Revision-Date: 2021-08-31T09:02:54.831Z\n"
 
 msgid "Analytics Details"
 msgstr "Analytics Details"
@@ -55,6 +55,18 @@ msgstr "Legends"
 
 msgid "Aggregation Levels"
 msgstr "Aggregation Levels"
+
+msgid "Details"
+msgstr "Details"
+
+msgid "no color"
+msgstr "no color"
+
+msgid "no icon"
+msgstr "no icon"
+
+msgid "no comments"
+msgstr "no comments"
 
 msgid "No legends assigned"
 msgstr "No legends assigned"
@@ -276,9 +288,6 @@ msgstr "by"
 
 msgid "and last updated on"
 msgstr "and last updated on"
-
-msgid "Details"
-msgstr "Details"
 
 msgid "User Access"
 msgstr "User Access"
