--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-31T09:02:54.831Z\n"
-"PO-Revision-Date: 2021-08-31T09:02:54.831Z\n"
+"POT-Creation-Date: 2021-09-01T07:17:23.412Z\n"
+"PO-Revision-Date: 2021-09-01T07:17:23.412Z\n"
 
 msgid "Analytics Details"
 msgstr "Analytics Details"
@@ -34,6 +34,9 @@ msgstr "Data sources"
 
 msgid "Data element is captured from following sources"
 msgstr "Data element is captured from following sources"
+
+msgid "Datasets"
+msgstr "Datasets"
 
 msgid "submitting {{variables1}} after every {{variables2}} days "
 msgstr "submitting {{variables1}} after every {{variables2}} days "
@@ -117,6 +120,15 @@ msgstr ""
 "It’s labelled in short as {{variables1}} and has a code of {{variables2}}. "
 "In data entry form, it’s named “{{variables3}}”"
 
+msgid "Data sources (Datasets/Programs)"
+msgstr "Data sources (Datasets/Programs)"
+
+msgid "Data elements in this group are captured from the following sources"
+msgstr "Data elements in this group are captured from the following sources"
+
+msgid "There are no Data Elements in this Data Element group"
+msgstr "There are no Data Elements in this Data Element group"
+
 msgid "Datasets (Reporting rates) in indicator"
 msgstr "Datasets (Reporting rates) in indicator"
 
@@ -143,9 +155,6 @@ msgstr "Assigned orgunits"
 
 msgid "Data elements"
 msgstr "Data elements"
-
-msgid "Data sources (Datasets/Programs)"
-msgstr "Data sources (Datasets/Programs)"
 
 msgid "Indicator is captured from the following sources,"
 msgstr "Indicator is captured from the following sources,"
