indicator group adding related indicator works

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-09-02T09:01:10.401Z\n"
-"PO-Revision-Date: 2021-09-02T09:01:10.401Z\n"
+"POT-Creation-Date: 2021-09-03T13:22:59.136Z\n"
+"PO-Revision-Date: 2021-09-03T13:22:59.136Z\n"
 
 msgid "Analytics Details"
 msgstr "Analytics Details"
@@ -298,6 +298,12 @@ msgstr "Indicators in this group are captured from the following sources"
 
 msgid "Indicator Group name is  {{variables1}}."
 msgstr "Indicator Group name is  {{variables1}}."
+
+msgid "Related Data elements"
+msgstr "Related Data elements"
+
+msgid "The following is the summary of the data elements used in the group"
+msgstr "The following is the summary of the data elements used in the group"
 
 msgid "Accesibility & Sharing Settings"
 msgstr "Accesibility & Sharing Settings"
