--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-09-13T11:09:24.811Z\n"
-"PO-Revision-Date: 2021-09-13T11:09:24.812Z\n"
+"POT-Creation-Date: 2021-09-15T07:41:17.788Z\n"
+"PO-Revision-Date: 2021-09-15T07:41:17.788Z\n"
 
 msgid "Analytics Details"
 msgstr "Analytics Details"
@@ -123,6 +123,18 @@ msgstr ""
 "It’s labelled in short as {{variables1}} and has a code of {{variables2}}. "
 "In data entry form, it’s named “{{variables3}}”"
 
+msgid "sources"
+msgstr "sources"
+
+msgid " submitting "
+msgstr " submitting "
+
+msgid " after every "
+msgstr " after every "
+
+msgid "days"
+msgstr "days"
+
 msgid "Data sources (Datasets/Programs)"
 msgstr "Data sources (Datasets/Programs)"
 
@@ -131,6 +143,19 @@ msgstr "Data elements in this group are captured from the following sources"
 
 msgid "There are no Data Elements in this Data Element group"
 msgstr "There are no Data Elements in this Data Element group"
+
+msgid " Data element group Facts"
+msgstr " Data element group Facts"
+
+msgid "It has {{variables}} data Elements"
+msgstr "It has {{variables}} data Elements"
+
+msgid ""
+"It’s data elements belongs to {{variables}} dataset and {{variables2}} "
+"program sources of data"
+msgstr ""
+"It’s data elements belongs to {{variables}} dataset and {{variables2}} "
+"program sources of data"
 
 msgid ""
 "The following is the summary of indicators using the data elements in this "
@@ -169,6 +194,16 @@ msgstr "Suggesting Factor"
 msgid "Documentation"
 msgstr "Documentation"
 
+msgid "Data Sources"
+msgstr "Data Sources"
+
+msgid ""
+"Function have rules calculating from multiple data sources. Here are few "
+"data sources observed"
+msgstr ""
+"Function have rules calculating from multiple data sources. Here are few "
+"data sources observed"
+
 msgid "Id"
 msgstr "Id"
 
@@ -189,6 +224,9 @@ msgstr "More details"
 
 msgid "Last updated"
 msgstr "Last updated"
+
+msgid "It is approximately {{variables}}  in size"
+msgstr "It is approximately {{variables}}  in size"
 
 msgid "It’s using function analytics library"
 msgstr "It’s using function analytics library"
@@ -356,8 +394,24 @@ msgstr "Lower"
 msgid "Legends for analysis"
 msgstr "Legends for analysis"
 
+msgid " days"
+msgstr " days"
+
 msgid "Indicators in this group are captured from the following sources"
 msgstr "Indicators in this group are captured from the following sources"
+
+msgid "Indicator group Facts"
+msgstr "Indicator group Facts"
+
+msgid " It has {{variables}} indicators"
+msgstr " It has {{variables}} indicators"
+
+msgid ""
+" It’s data elements belongs to {{variables}} datasets and {{variables2}} "
+"program sources of data"
+msgstr ""
+" It’s data elements belongs to {{variables}} datasets and {{variables2}} "
+"program sources of data"
 
 msgid "Indicator Group name is  {{variables1}}."
 msgstr "Indicator Group name is  {{variables1}}."
@@ -368,6 +422,93 @@ msgstr "Related Data elements"
 msgid "The following is the summary of the data elements used in the group"
 msgstr "The following is the summary of the data elements used in the group"
 
+msgid "Program Indicator is captured from with following program"
+msgstr "Program Indicator is captured from with following program"
+
+msgid "{{variables}} submitting records on every event"
+msgstr "{{variables}} submitting records on every event"
+
+msgid ""
+"{{variables1}} is a {{variables2}} indicator, described as {{variables3}}. "
+"It’s labelled in short as {{variables4}} and has a code of {{variables5}}. "
+"In analytics it displays up to {{variables6}} decimals."
+msgstr ""
+"{{variables1}} is a {{variables2}} indicator, described as {{variables3}}. "
+"It’s labelled in short as {{variables4}} and has a code of {{variables5}}. "
+"In analytics it displays up to {{variables6}} decimals."
+
+msgid "It is also set to display in form"
+msgstr "It is also set to display in form"
+
+msgid " Calculation details"
+msgstr " Calculation details"
+
+msgid ""
+"Calculation of the values will be {{variables}} of {{variables2}} across "
+"orgunit and period."
+msgstr ""
+"Calculation of the values will be {{variables}} of {{variables2}} across "
+"orgunit and period."
+
+msgid ""
+" Events implies, each event from data source is considered as independent "
+"row to be counted, and properties and details of the event are used to "
+"filter events."
+msgstr ""
+" Events implies, each event from data source is considered as independent "
+"row to be counted, and properties and details of the event are used to "
+"filter events."
+
+msgid ""
+"Enrollment implies, each enrollment from data source is considered as "
+"independent row to be counted, and events from any stage and other "
+"properties and details of enrollment are used to filter enrollments."
+msgstr ""
+"Enrollment implies, each enrollment from data source is considered as "
+"independent row to be counted, and events from any stage and other "
+"properties and details of enrollment are used to filter enrollments."
+
+msgid ""
+"Below are expression details on computing program indicator and it’s "
+"related data source"
+msgstr ""
+"Below are expression details on computing program indicator and it’s "
+"related data source"
+
+msgid ""
+"Below are period boundaries that determines which {{variables}} will be "
+"included in calculations of the program indicators, where for"
+msgstr ""
+"Below are period boundaries that determines which {{variables}} will be "
+"included in calculations of the program indicators, where for"
+
+msgid " event date will be used."
+msgstr " event date will be used."
+
+msgid "enrollment analytics will be used."
+msgstr "enrollment analytics will be used."
+
+msgid "There are no indicator facts associated with this Program Indicator"
+msgstr "There are no indicator facts associated with this Program Indicator"
+
+msgid "Program Indicator facts"
+msgstr "Program Indicator facts"
+
+msgid "Belongs to the following program groups of indicators"
+msgstr "Belongs to the following program groups of indicators"
+
+msgid "#"
+msgstr "#"
+
+msgid "show less"
+msgstr "show less"
+
+msgid "show more"
+msgstr "show more"
+
+msgid "There are no legends associated with these Program Indicator"
+msgstr "There are no legends associated with these Program Indicator"
+
 msgid "This"
 msgstr "This"
 
@@ -376,6 +517,13 @@ msgstr "was first created on"
 
 msgid "by"
 msgstr "by"
+
+msgid ""
+"It’s data elements belongs to {{variables}} indicators using it as "
+"numerator/denominator"
+msgstr ""
+"It’s data elements belongs to {{variables}} indicators using it as "
+"numerator/denominator"
 
 msgid "This {{variables1}} is not related to any indicator"
 msgstr "This {{variables1}} is not related to any indicator"
